Fix the styling of recipe title on mobile

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -171,7 +171,7 @@
     }
   }
   .post.single { padding: 20px 10px 10px 10px;
-    .post-title { font: 700 30px/38px Cardo, sans-serif }
+    .post-title { font: 200 30px/38px Cardo, sans-serif }
     .post-content {
       .alignleft, .alignright { float: none; margin: 0;
         img { width: 100%; }
